--- a/Mission6_zm275/Views/Home/Form.cshtml
+++ b/Mission6_zm275/Views/Home/Form.cshtml
@@ -1,36 +1,58 @@
 ﻿@model Mission6_zm275.Models.FormModel
 
 @{
-    ViewData["Title"] = "Add Films";
+    ViewData["Title"] = "View";
 }
 
-<h1>Add New Films Here</h1>
+<h1>Films</h1>
 
-
+<h4>Add films here</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="View">
+    <div class="col-md-4" >
+        <form method="post" >
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="LentTo" class="control-label"></label>
-                <input asp-for="LentTo" class="form-control" />
-                <span asp-validation-for="LentTo" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Category" class="control-label"></label>
                 <input asp-for="Category" class="form-control" />
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Director" class="control-label"></label>
-                <input asp-for="Director" class="form-control" />
-                <span asp-validation-for="Director" class="text-danger"></span>
+                <label asp-for="Title" class="control-label"></label>
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Year" class="control-label"></label>
                 <input asp-for="Year" class="form-control" />
                 <span asp-validation-for="Year" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Director" class="control-label"></label>
+                <input asp-for="Director" class="form-control" />
+                <span asp-validation-for="Director" class="text-danger"></span>
+            </div>
+            @*<div class="form-group">
+            <label asp-for="SelectedItem">Select a rating:</label>
+
+            <select asp-for="SelectedItem" asp-items="Model.Items" class="form-control"></select>
+            <span asp-validation-for="SelectedItem" class="text-danger"></span>
+        </div>*@
+            <div class="form-group">
+            <label asp-for="SelectedItem">Select a rating:</label>
+
+            <select asp-for="SelectedItem" class="form-control">
+                <option value=1>G</option>
+                <option value=2>PG</option>
+                <option value=3>PG-13</option>
+                <option value=4>R</option>
+            </select>
+            <span asp-validation-for="SelectedItem" class="text-danger"></span>
+        </div>
+            <div class="form-group">
+                <label asp-for="LentTo" class="control-label"></label>
+                <input asp-for="LentTo" class="form-control" />
+                <span asp-validation-for="LentTo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Notes" class="control-label"></label>
@@ -43,24 +65,14 @@
                 </label>
             </div>
             <div class="form-group">
-                <label for="exampleDropdown">Rating</label>
-                <select class="form-control" id="exampleDropdown" asp-for="SelectedItem">
-                    <option value="">-- Select an option --</option>
-                    @foreach (var item in Model.Items)
-                    {
-                    <option value="@item.Value">@item.Text</option>
-                    }
-                </select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <button type="submit" >Create</button>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Home</a>
 </div>
 
 @section Scripts {
