--- a/Mission6_zm275/Views/Home/Form.cshtml
+++ b/Mission6_zm275/Views/Home/Form.cshtml
@@ -10,12 +10,19 @@
 <hr />
 <div class="row">
     <div class="col-md-4" >
-        <form method="post" >
+        <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Category" class="control-label"></label>
-                <input asp-for="Category" class="form-control" />
-                <span asp-validation-for="Category" class="text-danger"></span>
+                <label asp-for="CategoryId" class="control-label"></label>
+                <select asp-for="CategoryId">
+                    <option value="">Select an option</option>
+                    @foreach (Category c in ViewBag.Categories)
+                    {
+                        <option value="@c.CategoryId">@c.CategoryName</option>
+                    }
+
+                </select>
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -42,10 +49,10 @@
             <label asp-for="SelectedItem">Select a rating:</label>
 
             <select asp-for="SelectedItem" class="form-control">
-                <option value=1>G</option>
-                <option value=2>PG</option>
-                <option value=3>PG-13</option>
-                <option value=4>R</option>
+                <option value="G">G</option>
+                <option value="PG">PG</option>
+                <option value="PG-13">PG-13</option>
+                <option value="R">R</option>
             </select>
             <span asp-validation-for="SelectedItem" class="text-danger"></span>
         </div>
