--- a/Mission6_zm275/Views/Shared/_Layout.cshtml
+++ b/Mission6_zm275/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Form">Add Films</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Movies">View Movies</a>
+                        </li>
                     </ul>
                 </div>
             </div>
