--- a/Mission6_zm275/Views/Home/Form.cshtml
+++ b/Mission6_zm275/Views/Home/Form.cshtml
@@ -39,22 +39,17 @@
                 <input asp-for="Director" class="form-control" />
                 <span asp-validation-for="Director" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
-            <label asp-for="SelectedItem">Select a rating:</label>
-
-            <select asp-for="SelectedItem" asp-items="Model.Items" class="form-control"></select>
-            <span asp-validation-for="SelectedItem" class="text-danger"></span>
-        </div>*@
+            
             <div class="form-group">
-            <label asp-for="SelectedItem">Select a rating:</label>
+            <label asp-for="Rating">Select a rating:</label>
 
-            <select asp-for="SelectedItem" class="form-control">
+            <select asp-for="Rating" class="form-control">
                 <option value="G">G</option>
                 <option value="PG">PG</option>
                 <option value="PG-13">PG-13</option>
                 <option value="R">R</option>
             </select>
-            <span asp-validation-for="SelectedItem" class="text-danger"></span>
+            <span asp-validation-for="Rating" class="text-danger"></span>
         </div>
             <div class="form-group">
                 <label asp-for="LentTo" class="control-label"></label>
