--- a/Mission6_zm275/Views/Home/Movies.cshtml
+++ b/Mission6_zm275/Views/Home/Movies.cshtml
@@ -38,7 +38,7 @@
             <td>@i.FormId</td>
 
             <td><a asp-controller="Home" asp-action="Edit" asp-route-id="@i.FormId">Edit</a></td>
-            <td><a asp-controller="Home" asp-action="Delete">Delete</a></td>
+            <td><a asp-controller="Home" asp-action="Delete" asp-route-id="@i.FormId">Delete</a></td>
 
         </tr>
             }
