--- a/Mission6_zm275/Views/Home/Form.cshtml
+++ b/Mission6_zm275/Views/Home/Form.cshtml
@@ -12,6 +12,7 @@
     <div class="col-md-4" >
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input asp-for="FormId" type="hidden"/>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
                 <select asp-for="CategoryId">
@@ -67,7 +68,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <button type="submit" >Create</button>
+                <button type="submit" >Save</button>
             </div>
         </form>
     </div>
